--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,10 @@
         renderer.toneMappingExposure = Math.pow(2, 0);
 
         controls = new OrbitControls(camera, renderer.domElement);
+        // controls.autoRotate = true;
+        // controls.autoRotateSpeed = - 18;
+        // controls.enableDamping = true;
+        // controls.dampingFactor = 0.05;
         controls.update();
 
         pmremGenerator = new THREE.PMREMGenerator(renderer);
@@ -118,7 +122,7 @@
           .setKTX2Loader(KTX2_LOADER.detectSupport(renderer))
           .setMeshoptDecoder(MeshoptDecoder);
 
-          const model = "model.glb";
+        const model = "model.glb";
         // const model = "monk.glb";
         // const model = "Flamingo.glb";
         // const model = "ferrari.glb";
