logs detect file type

--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,7 @@
           .setMeshoptDecoder(MeshoptDecoder);
 
         const model = "model.glb";
+        // const model = "class_3_fighter_spaceship_hodbin_4k.glb";
         // const model = "monk.glb";
         // const model = "Flamingo.glb";
         // const model = "ferrari.glb";
